vlib/v/checker/tests/struct_ref_field_const_default_err.out
vlib/v/checker/tests/struct_ref_field_const_default_err.vv:11:13: error: reference field must be initialized with reference
    9 |     a int
   10 | pub mut:
   11 |     tag &Tag = null_tag
      |                ~~~~~~~~
   12 | }
