vlib/v/checker/tests/struct_ref_field_const_default_err.vv
struct Tag {
	name string
}

const null_tag = Tag{}

struct Thing {
pub:
	a int
pub mut:
	tag &Tag = null_tag
}
